--- a/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/product-abstract.twig
+++ b/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/product-abstract.twig
@@ -28,7 +28,8 @@
                 productAttributes: productAttributes,
                 metaAttributes: metaAttributes,
                 idProductAbstract: idProductAbstract,
-                idProductConcrete: ''
+                idProductConcrete: '',
+                csrfTokenId: csrfTokenId
             } %}
         {% endblock %}
     {% endembed %}
