CC-2108: replaced Silex Csrf provider with symfony form csrf validation.

--- a/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/product.twig
+++ b/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/product.twig
@@ -29,7 +29,7 @@
                 metaAttributes: metaAttributes,
                 idProductAbstract: product.fkProductAbstract,
                 idProductConcrete: product.idProductConcrete,
-                csrfTokenId: csrfTokenId
+                csrfForm: csrfForm
             } %}
         {% endblock %}
     {% endembed %}
