--- a/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/_partials/attribute-table.twig
+++ b/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/_partials/attribute-table.twig
@@ -1,8 +1,10 @@
 <table class="table table-striped table-bordered table-hover gui-table-data" id="productAttributesTable" data-paging="false">
+    {{ form_start(csrfForm) }}
+    {{ form_widget(csrfForm) }}
+    {{ form_end(csrfForm) }}
     <form id="attribute_values_form" method="post" class="kv_autocomplete_form" action="{{ formActionUrl }}">
         <input type="hidden" name="attribute_values_form[hidden_product_abstract_id]" id="attribute_values_form_hidden_product_abstract_id" value="{{ idProductAbstract }}" />
         <input type="hidden" name="attribute_values_form[hidden_product_id]" id="attribute_values_form_hidden_product_id" value="{{ idProductConcrete }}" />
-        <input type="hidden" name="attribute_values_form[hidden_csrf_token]" id="attribute_values_form_hidden_csrf_token" value="{{ csrf_token(csrfTokenId) }}" />
         <thead>
         <tr>
             <th>Key</th>
