--- a/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/product-abstract.twig
+++ b/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/product-abstract.twig
@@ -29,7 +29,7 @@
                 metaAttributes: metaAttributes,
                 idProductAbstract: idProductAbstract,
                 idProductConcrete: '',
-                csrfTokenId: csrfTokenId
+                csrfForm: csrfForm
             } %}
         {% endblock %}
     {% endembed %}
